--- a/Dockerfile.coordinator
+++ b/Dockerfile.coordinator
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-CMD ["uvicorn", "src.coordinator.application.api:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["bash", "-c", "alembic upgrade head && uvicorn src.coordinator.application.api:app --host 0.0.0.0 --port 8000"]
