--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,37 +12,16 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
-  coordinator:
+  server:
     build:
       context: .
-      dockerfile: Dockerfile.coordinator
+      dockerfile: Dockerfile
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres/postgres
     depends_on:
       - postgres
-    networks:
-      - internal
-      - external
     ports:
       - "8000:8000"
-
-  lobby:
-    networks:
-      - internal
-    build:
-      context: .
-      dockerfile: Dockerfile.lobby
-    depends_on:
-      - postgres
-    ports:
-      - "8001:8001"
-
-networks:
-  internal:
-    driver: bridge
-    internal: true
-  external:
-    driver: bridge
   
 volumes:
   postgres-data:
